--- a/debezium-connector-sqlserver/pom.xml
+++ b/debezium-connector-sqlserver/pom.xml
@@ -49,7 +49,13 @@
         <dependency>
             <groupId>io.confluent</groupId>
             <artifactId>credential-providers</artifactId>
-            <version>0.171.0</version>
+            <version>0.172.0</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.slf4j</groupId>
+                    <artifactId>slf4j-reload4j</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>org.apache.kafka</groupId>
