--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -114,6 +114,71 @@ blocks:
             - . publish-test-results
             - artifact push workflow target/test-results
 
+  - name: Release
+    dependencies: ["Test"]
+    run:
+      when: "branch != 'master' and branch !~ '[0-9]+\\.[0-9]+\\.x' and branch =~ 'v[0-9]+\\.[0-9]+\\.[0-9]+\\-hotfix\\-x' and change_in('debezium-core/')"
+    task:
+      jobs:
+        - name: Release debezium-core
+          commands:
+            - ci-tools ci-update-version
+            - ci-tools ci-push-tag
+            # Build debezium-core with original groupId (io.debezium) to keep dependencies intact
+            - mvn -U -Dmaven.wagon.http.retryHandler.count=10 --batch-mode clean install -Passembly -pl debezium-core -am -DskipTests -DskipITs
+            # Extract version from the built JAR filename (most reliable method)
+            - export DEBEZIUM_VERSION=$(ls debezium-core/target/debezium-core-*.jar | grep -v '\(sources\|javadoc\|tests\|shaded\)' | head -1 | sed 's|.*/debezium-core-\(.*\)\.jar|\1|')
+            - echo "Deploying version - ${DEBEZIUM_VERSION}"
+            # Verify version was extracted successfully
+            - |
+              if [ -z "$DEBEZIUM_VERSION" ]; then
+                echo "ERROR: Could not determine version from built artifacts"
+                ls -la debezium-core/target/
+                exit 1
+              fi
+            # Create a modified POM with io.confluent groupId for deployment
+            - cp debezium-core/pom.xml debezium-core/target/debezium-core-${DEBEZIUM_VERSION}.pom
+            # Add explicit groupId and version after modelVersion (since they're inherited from parent)
+            - sed -i '/<\/modelVersion>/a\    <groupId>io.confluent</groupId>\n    <version>'"${DEBEZIUM_VERSION}"'</version>' debezium-core/target/debezium-core-${DEBEZIUM_VERSION}.pom
+            # Deploy POM file
+            - mvn deploy:deploy-file
+              -Durl=https://confluent-519856050701.d.codeartifact.us-west-2.amazonaws.com/maven/maven-snapshots/
+              -DrepositoryId=confluent-codeartifact-internal
+              -Dfile=debezium-core/target/debezium-core-${DEBEZIUM_VERSION}.pom
+              -DgroupId=io.confluent
+              -DartifactId=debezium-core
+              -Dversion=${DEBEZIUM_VERSION}
+              -Dpackaging=pom
+            # Deploy main JAR with io.confluent groupId
+            - mvn deploy:deploy-file
+              -Durl=https://confluent-519856050701.d.codeartifact.us-west-2.amazonaws.com/maven/maven-snapshots/
+              -DrepositoryId=confluent-codeartifact-internal
+              -Dfile=debezium-core/target/debezium-core-${DEBEZIUM_VERSION}.jar
+              -DgroupId=io.confluent
+              -DartifactId=debezium-core
+              -Dversion=${DEBEZIUM_VERSION}
+              -Dpackaging=jar
+            # Deploy sources JAR
+            - mvn deploy:deploy-file
+              -Durl=https://confluent-519856050701.d.codeartifact.us-west-2.amazonaws.com/maven/maven-snapshots/
+              -DrepositoryId=confluent-codeartifact-internal
+              -Dfile=debezium-core/target/debezium-core-${DEBEZIUM_VERSION}-sources.jar
+              -DgroupId=io.confluent
+              -DartifactId=debezium-core
+              -Dversion=${DEBEZIUM_VERSION}
+              -Dpackaging=jar
+              -Dclassifier=sources
+            # Deploy javadoc JAR
+            - mvn deploy:deploy-file
+              -Durl=https://confluent-519856050701.d.codeartifact.us-west-2.amazonaws.com/maven/maven-snapshots/
+              -DrepositoryId=confluent-codeartifact-internal
+              -Dfile=debezium-core/target/debezium-core-${DEBEZIUM_VERSION}-javadoc.jar
+              -DgroupId=io.confluent
+              -DartifactId=debezium-core
+              -Dversion=${DEBEZIUM_VERSION}
+              -Dpackaging=jar
+              -Dclassifier=javadoc
+
 after_pipeline:
   task:
     agent:
