--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -28,96 +28,9 @@ global_job_config:
       - . cache-maven restore
 
 blocks:
-  - name: Test
-    dependencies: []
-    run:
-      # don't run the tests on non-functional changes...
-      when: "change_in('/', {exclude: ['/.deployed-versions/', '.github/']})"
-    task:
-      jobs:
-        - name: MySQL 9.1 (mysql-ci-gtids)
-          commands:
-            - mvn -Dcloud -Dversion.mysql.server=9.1 -Pmysql-ci-gtids -Dcheckstyle.skip=true -Dformat.skip=true -DfailFlakyTests=false -pl debezium-connector-mysql -am -U -Dmaven.wagon.http.retryHandler.count=10 --batch-mode --no-transfer-progress verify
-            - . cve-scan
-            - . cache-maven store
-        - name: MySQL 9.1 (mysql-ci)
-          commands:
-            - mvn -Dcloud -Dversion.mysql.server=9.1 -Pmysql-ci -Dcheckstyle.skip=true -Dformat.skip=true -DfailFlakyTests=false -pl debezium-connector-mysql -am -U -Dmaven.wagon.http.retryHandler.count=10 --batch-mode --no-transfer-progress verify
-            - . cve-scan
-            - . cache-maven store
-        - name: MySQL 9.1 (mysql-ci-percona)
-          commands:
-            - mvn -Dcloud -Dversion.mysql.server=9.1 -Pmysql-ci-percona -Dcheckstyle.skip=true -Dformat.skip=true -DfailFlakyTests=false -pl debezium-connector-mysql -am -U -Dmaven.wagon.http.retryHandler.count=10 --batch-mode --no-transfer-progress verify
-            - . cve-scan
-            - . cache-maven store
-        - name: MySQL 9.1 (mysql-ci-ssl)
-          commands:
-            - mvn -Dcloud -Dversion.mysql.server=9.1 -Pmysql-ci-ssl -Dcheckstyle.skip=true -Dformat.skip=true -DfailFlakyTests=false -pl debezium-connector-mysql -am -U -Dmaven.wagon.http.retryHandler.count=10 --batch-mode --no-transfer-progress verify
-            - . cve-scan
-            - . cache-maven store
-        - name: MySQL 8.4 (mysql-ci-gtids)
-          commands:
-            - mvn -Dcloud -Dversion.mysql.server=8.4 -Pmysql-ci-gtids -Dcheckstyle.skip=true -Dformat.skip=true -DfailFlakyTests=false -pl debezium-connector-mysql -am -U -Dmaven.wagon.http.retryHandler.count=10 --batch-mode --no-transfer-progress verify
-            - . cve-scan
-            - . cache-maven store
-        - name: MySQL 8.4 (mysql-ci)
-          commands:
-            - mvn -Dcloud -Dversion.mysql.server=8.4 -Pmysql-ci -Dcheckstyle.skip=true -Dformat.skip=true -DfailFlakyTests=false -pl debezium-connector-mysql -am -U -Dmaven.wagon.http.retryHandler.count=10 --batch-mode --no-transfer-progress verify
-            - . cve-scan
-            - . cache-maven store
-        - name: MySQL 8.4 (mysql-ci-percona)
-          commands:
-            - mvn -Dcloud -Dversion.mysql.server=8.4 -Pmysql-ci-percona -Dcheckstyle.skip=true -Dformat.skip=true -DfailFlakyTests=false -pl debezium-connector-mysql -am -U -Dmaven.wagon.http.retryHandler.count=10 --batch-mode --no-transfer-progress verify
-            - . cve-scan
-            - . cache-maven store
-        - name: MySQL 8.4 (mysql-ci-ssl)
-          commands:
-            - mvn -Dcloud -Dversion.mysql.server=8.4 -Pmysql-ci-ssl -Dcheckstyle.skip=true -Dformat.skip=true -DfailFlakyTests=false -pl debezium-connector-mysql -am -U -Dmaven.wagon.http.retryHandler.count=10 --batch-mode --no-transfer-progress verify
-            - . cve-scan
-            - . cache-maven store
-        - name: MariaDB 11.4 (mariadb-ci)
-          commands:
-            - mvn -Dcloud -Pmariadb-ci -Dcheckstyle.skip=true -Dformat.skip=true -DfailFlakyTests=false -pl debezium-connector-mariadb -am -U -Dmaven.wagon.http.retryHandler.count=10 --batch-mode --no-transfer-progress verify
-            - . cve-scan
-            - . cache-maven store
-        - name: MariaDB 11.4 (mariadb-ci-ssl)
-          commands:
-            - mvn -Dcloud -Pmariadb-ci-ssl -Dcheckstyle.skip=true -Dformat.skip=true -DfailFlakyTests=false -pl debezium-connector-mariadb -am -U -Dmaven.wagon.http.retryHandler.count=10 --batch-mode --no-transfer-progress verify
-            - . cve-scan
-            - . cache-maven store
-        - name: MariaDB 11.4 (mariadb-ci-gtids)
-          commands:
-            - mvn -Dcloud -Pmariadb-ci-gtids -Dcheckstyle.skip=true -Dformat.skip=true -DfailFlakyTests=false -pl debezium-connector-mariadb -am -U -Dmaven.wagon.http.retryHandler.count=10 --batch-mode --no-transfer-progress verify
-            - . cve-scan
-            - . cache-maven store
-        - name: Postgres 12 (assembly,postgres-12)
-          commands:
-            - mvn -Dcloud -Passembly,postgres-12 -Dcheckstyle.skip=true -Dformat.skip=true -DfailFlakyTests=false -pl debezium-connector-postgres -am -U -Dmaven.wagon.http.retryHandler.count=10 --batch-mode --no-transfer-progress verify
-            - . cve-scan
-            - . cache-maven store
-        - name: Postgres 17 (assembly,postgres-17,pgoutput-decoder)
-          commands:
-            - mvn -Dcloud -Passembly,postgres-17,pgoutput-decoder -Dcheckstyle.skip=true -Dformat.skip=true -DfailFlakyTests=false -pl debezium-connector-postgres -am -U -Dmaven.wagon.http.retryHandler.count=10 --batch-mode --no-transfer-progress verify
-            - . cve-scan
-            - . cache-maven store
-        - name: SqlServer
-          commands:
-            - mvn -Dcloud -Passembly -Dcheckstyle.skip=true -Dformat.skip=true -DfailFlakyTests=false -pl debezium-connector-sqlserver -am -U -Dmaven.wagon.http.retryHandler.count=10 --batch-mode --no-transfer-progress verify
-            - . cve-scan
-            - . cache-maven store
-      env_vars:
-        - name: SEMAPHORE_AGENT_UPLOAD_JOB_LOGS
-          value: when-trimmed
-      epilogue:
-        always:
-          commands:
-            - . publish-test-results
-            - artifact push workflow target/test-results
-
   - name: Release
-    dependencies: ["Test"]
     run:
-      when: "branch != 'master' and branch !~ '[0-9]+\\.[0-9]+\\.x' and branch =~ 'v[0-9]+\\.[0-9]+\\.[0-9]+\\-hotfix\\-x' and change_in('debezium-core/')"
+      when: "branch != 'master' and branch !~ '[0-9]+\\.[0-9]+\\.x' and branch =~ 'v[0-9]+\\.[0-9]+\\.[0-9]+\\-hotfix\\-x'"
     task:
       jobs:
         - name: Release debezium-core
