--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -115,6 +115,7 @@ blocks:
             - artifact push workflow target/test-results
 
   - name: Release
+    dependencies: []
     run:
       when: "branch != 'master' and branch !~ '[0-9]+\\.[0-9]+\\.x' and branch =~ 'v[0-9]+\\.[0-9]+\\.[0-9]+\\-hotfix\\-x' and change_in('debezium-core/')"
     task:
