--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -17,7 +17,7 @@ execution_time_limit:
   hours: 4
 
 queue:
-  - when: "branch != 'master' and branch !~ '[0-9]+\\.[0-9]+\\.x' and branch !~ 'v[0-9]+\\.[0-9]+\\.[0-9]+\\-hotfix\\-x'"
+  - when: "branch != 'master' and branch !~ '[0-9]+\\.[0-9]+\\.x' and branch !~ 'v[0-9]+\\.[0-9]+\\.[0-9]+\\-hotfix\\-x' and branch !~ 'v[0-9]+\\.[0-9]+\\.[0-9]+\\-orcl\\-hotfix\\-x'"
     processing: parallel
 
 global_job_config:
@@ -117,7 +117,7 @@ blocks:
   - name: Release
     dependencies: []
     run:
-      when: "branch != 'master' and branch !~ '[0-9]+\\.[0-9]+\\.x' and branch =~ 'v[0-9]+\\.[0-9]+\\.[0-9]+\\-hotfix\\-x' and change_in('debezium-core/')"
+      when: "branch != 'master' and branch !~ '[0-9]+\\.[0-9]+\\.x' and branch =~ 'v[0-9]+\\.[0-9]+\\.[0-9]+\\-orcl\\-hotfix\\-x' and change_in('debezium-core/')"
     task:
       jobs:
         - name: Release debezium-core
