--- a/.semaphore/project.yml
+++ b/.semaphore/project.yml
@@ -27,6 +27,7 @@ spec:
       - main
       - /^\d+\.\d+\.x$/
       - /v\d+\.\d+\.\d+\-hotfix\-x/
+      - /v\d+\.\d+\.\d+\-orcl\-hotfix\-x/
       - /^gh-readonly-queue.*/
   custom_permissions: true
   debug_permissions:
